file change color change search bar add

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <figure class="banner-image-con">
-                                    <img src="assets/images/home-banner-image.png" alt="image" class="">
+                                    <img src="assets/images/mpFamous1.png" alt="image" class="">
                                 </figure>
                                 <!--  -->
                             </div>
@@ -112,7 +112,31 @@
                             </div>
                             <div class="col-lg-6">
                                 <figure class="banner-image-con">
-                                    <img src="assets/images/home-banner-image.png" alt="image" class="">
+                                    <img src="assets/images/mpFamous2.png" alt="image" class="">
+                                </figure>
+                                <!--  -->
+                            </div>
+                            <!-- row -->
+                        </div>
+                        <!-- item -->
+                    </div>
+                    <div class="item">
+                        <div class="row align-items-center">
+                            <div class="col-lg-6  order-xl-0 order-lg-0 order-1">
+                                <div class="banner-inner-content">
+                                    <h4>Discover New Horizons! <i class="fa-solid fa-earth-americas"></i></h4>
+                                    <h1>Embark on an Epic Journey!</h1>
+                                    <p class="font-size-20">Explore new horizons and create unforgettable memories.</p>
+                                    <div class="green-btn d-inline-block">
+                                        <a href="about.html" class="d-inline-block">Explore Now</a>
+                                    </div>
+                                    <!-- banner inner content -->
+                                </div>
+                                <!--  -->
+                            </div>
+                            <div class="col-lg-6">
+                                <figure class="banner-image-con">
+                                    <img src="assets/images/mpFamous3.png" alt="image" class="">
                                 </figure>
                                 <!--  -->
                             </div>
@@ -136,7 +160,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <figure class="banner-image-con">
-                                    <img src="assets/images/home-banner-image.png" alt="image" class="">
+                                    <img src="assets/images/top-10-Mp.png" alt="image" class="">
                                 </figure>
                                 <!--  -->
                             </div>
