--- a/contact.html
+++ b/contact.html
@@ -118,23 +118,22 @@
                         <div class="contact-info">
                             <h4 class="text-uppercase sub-heading">Contact Info</h4>
                             <ul class="list-unstyled p-0 m-0 contact-info-inner-wrapper">
-                                <li><a href="mailto:support@traveltek.com"><i class="fa-solid fa-envelope"></i>
-                    support@traveltek.com</a></li>
-                                <li><a href="tel:+1(0800)123456"><i class="fa-solid fa-square-phone"></i> +1 (0800) 123
-                    456</a></li>
-                                <li><i class="fa-solid fa-location-dot"></i> Envato, King Street, Melbourne VIC, Australia</li>
+                                <li><a href="mailto:info@luckytravles.com"><i class="fa-solid fa-envelope"></i>
+                                    info@luckytravles.com</a></li>
+                                    <li><a href="tel:+917828722723"><i class="fa-solid fa-square-phone"></i> +91 78287 22723</a></li>
+                                <li><a href="tel:+919977239993"><i class="fa-solid fa-square-phone"></i> +91 99772 39993</a></li>
+                                <li><i class="fa-solid fa-location-dot"></i> 1/1 Desai Nagar Ujjain Madhya Pradesh 456010.</li>
                                 <!-- contact info inner wrapper -->
                             </ul>
                             <div class="social-icons d-inline-block">
                                 <div class="circle d-inline-block"><a href="https://www.facebook.com/login/"><i
                       class="fa-brands fa-square-facebook"></i></a></div>
+                      <div class="circle d-inline-block"><a href="https://www.linkedin.com/login"><i
+            class="fa-brands fa-instagram"></i></a>
+                      </div>
                                 <div class="circle d-inline-block"><a href="https://twitter.com/i/flow/login"><i
                       class="fa-brands fa-square-x-twitter"></i></a></div>
-                                <div class="circle d-inline-block"><a href="https://www.linkedin.com/login"><i
-                      class="fa-brands fa-linkedin"></i></a>
-                                </div>
-                                <div class="circle d-inline-block"><a href="https://www.pinterest.com/"><i
-                      class="fa-brands fa-square-pinterest"></i></a></div>
+                              
                             </div>
                         </div>
                         <!-- about travel content -->
