--- a/gallery.html
+++ b/gallery.html
@@ -89,15 +89,15 @@
         <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
         <div class="container wow bounceInUp" data-wow-duration="2s">
             <div class="heading-title text-center">
-                <h4 class="text-uppercase">News & Articles</h4>
-                <h2 class="">Stay Update with <br> Traveltrek
+                <h4 class="text-uppercase">Image Gallery</h4>
+                <h2 class="">Stay Update with Lucky<br>Tour & Travles
                 </h2>
                 <!-- heading title -->
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img1.jpg" alt="img"></figure>
+                        <figure><img class="img-fluid" src="assets/images/mpFamous1.png" alt="img"></figure>
                         <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
                             <a href="single-blog.html">
                                 <h6 class="text-white">Change your place and <br> get the fresh air</h6>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img2.jpg" alt="img"></figure>
+                        <figure><img class="img-fluid" src="assets/images/mpFamous2.png" alt="img"></figure>
                         <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
                             <a href="single-blog.html">
                                 <h6 class="text-white">Change your place and <br> get the fresh air</h6>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6 last-con">
                     <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/article-img3.jpg" alt="img"></figure>
+                        <figure><img class="img-fluid" src="assets/images/top-10-Mp.png" alt="img"></figure>
                         <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
                             <a href="single-blog.html">
                                 <h6 class="text-white">Change your place and <br> get the fresh air</h6>
