Create Dyanamic content

--- a/about.html
+++ b/about.html
@@ -138,67 +138,8 @@
         <!-- exploring-activites-con -->
     </section>
     <!-- MEET OUR TEAM SECTION -->
-    <section class="float-left w-100 what-we-serve-con meet-our-team-con position-relative main-box padding-top padding-bottom">
-        <img alt="vector" class="vector4 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector4.png">
-        <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
-        <div class="container wow bounceInUp" data-wow-duration="2s">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h4 class="mustard-text text-uppercase">Professional people</h4>
-                    <h2 class="text-uppercase text-right">meet our tour <br> guides
-                    </h2>
-                </div>
-                <div class="col-xl-10 col-12 mr-auto ml-auto serve-outer text-center">
-                    <div class="server-box var1">
-                        <img class="img-fluid" src="assets/images/team1-img.png" alt="icon">
-                        <h4>Jacob Knight</h4>
-                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
-                        <ul class="d-inline-block list-unstyled p-0 m-0">
-                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
-                    class="fa-brands fa-facebook-f"></i></a></li>
-                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
-                    class="fa-brands fa-x-twitter"></i></a></li>
-                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
-                    class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
-                        <!-- server box -->
-                    </div>
-                    <div class="server-box var2">
-                        <img class="img-fluid" src="assets/images/team2-img.png" alt="icon">
-                        <h4>Alexandra Booth</h4>
-                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
-                        <ul class="d-inline-block list-unstyled p-0 m-0">
-                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
-                    class="fa-brands fa-facebook-f"></i></a></li>
-                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
-                    class="fa-brands fa-x-twitter"></i></a></li>
-                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
-                    class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
-                        <!-- server box -->
-                    </div>
-                    <div class="server-box var3">
-                        <img class="img-fluid" src="assets/images/team3-img.png" alt="icon">
-                        <h4>Kian Wilkinson</h4>
-                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
-                        <ul class="d-inline-block list-unstyled p-0 m-0">
-                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
-                    class="fa-brands fa-facebook-f"></i></a></li>
-                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
-                    class="fa-brands fa-x-twitter"></i></a></li>
-                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
-                    class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
-                        <!-- server box -->
-                    </div>
-                    <!-- server outer -->
-                </div>
-                <!-- row -->
-            </div>
-            <!-- container -->
-        </div>
-        <!-- what we serve con -->
-    </section>
+<!-- Index02.html-->
+
     <!-- PLAN YOUR TRIP SECTION -->
     <section class="float-left w-100 plan-trip-con position-relative main-box padding-top padding-bottom">
         <div class="container">
@@ -234,104 +175,12 @@
                 <div class="heading-content text-center position-relative">
                     <h4 class="text-uppercase">Review & Testimonials</h4>
                     <h2 class="text-white">What Our Customers Are <br> Saying About Us</h2>
-                    <!-- heading content -->
                 </div>
-                <div class="owl-carousel">
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person1.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Kieran Wallace</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person2.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Zachary Chapman</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person3.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Abigail Dawson</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person1.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Kieran Wallace</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person2.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Zachary Chapman</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <div class="item">
-                        <div class="review-box position-relative">
-                            <div class="quote-tag position-absolute"><i class="fa-solid fa-quote-right"></i></div>
-                            <figure class="">
-                                <img src="assets/images/review-person3.png" alt="icon" class="img-fluid">
-                            </figure>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempori ncididunt ut labore et dolore magna ali quaquis ipsum suspendisse ultrices gra vida risus commodo viverra maecenasa ccumsan lacus vel facilisis.
-                                </p>
-                            <h4 class="reviewer">Abigail Dawson</h4>
-                            <span class="d-block">company.com</span>
-                            <!-- review box -->
-                        </div>
-
-                        <!-- item -->
-                    </div>
-                    <!-- container -->
+                <div class="owl-carousel" id="testimonial-carousel">
+                    <!-- Dynamic content will be inserted here -->
                 </div>
-                <!-- color overlay -->
             </div>
-            <!-- review and testimonials con -->
+        </div>
     </section>
     <!-- NEWS AND ARTICLES SECTION -->
    
@@ -343,7 +192,7 @@
 
     <button id="back-to-top-btn-left" title="Whatsapp Live-Chat"></button>
 
-    <script src="assets/component/search.js"></script>
+
     <script src="assets/component/topBar.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
@@ -356,7 +205,7 @@
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/component/search.js"></script>
+    <script src="assets/MasterJs/booking.js"></script>
     <script src="assets/MasterJs/wholeTab.js"></script>
     <script src="assets/MasterJs/destination.js"></script>
     <script src="assets/MasterJs/testo.js"></script>
