--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
 
     <button id="back-to-top-btn-left" title="Whatsapp Live-Chat"></button>
 
-    <script src="assets/component/search.js"></script>
+    
     <script src="assets/component/topBar.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
@@ -244,7 +244,7 @@
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/component/search.js"></script>
+    <script src="assets/MasterJs/booking.js"></script>
     <script src="assets/MasterJs/wholeTab.js"></script>
     <script src="assets/MasterJs/destination.js"></script>
     <script src="assets/MasterJs/testo.js"></script>
