--- a/destinations.html
+++ b/destinations.html
@@ -101,7 +101,7 @@
         <div class="container top-destination-con1 wow bounceInUp" data-wow-duration="2s">
             <div class="heading-title text-center">
                 <h4 class="text-uppercase">Top Destinations</h4>
-                <h2 class="">Explore the Beauty of <br> The World</h2>
+                <h2 class="">Explore the Beauty of <br> The Madhya Pradesh</h2>
             </div>
             <div id="destinations-carousel" class="owl-carousel"></div>
         </div>
@@ -165,7 +165,7 @@
 
     <button id="back-to-top-btn-left" title="Whatsapp Live-Chat"></button>
 
-    <script src="assets/component/search.js"></script>
+   
     <script src="assets/component/topBar.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
@@ -178,7 +178,7 @@
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/counter.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/component/search.js"></script>
+    <script src="assets/MasterJs/booking.js"></script>
     <script src="assets/MasterJs/wholeTab.js"></script>
     <script src="assets/MasterJs/destination.js"></script>
     <script src="assets/MasterJs/testo.js"></script>
