--- a/testo.html
+++ b/testo.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-<script src="assets/component/search.js"></script>
+<script src="assets/MasterJs/booking.js"></script>
 <script src="assets/component/topBar.js"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
