--- a/index02.html
+++ b/index02.html
@@ -128,9 +128,9 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6  order-xl-0 order-lg-0 order-1">
                                 <div class="banner-inner-content">
-                                    <h4>Explore the World! <i class="fa-solid fa-earth-americas"></i></h4>
+                                    <h4>Explore the Madhya Pradesh! <i class="fa-solid fa-earth-americas"></i></h4>
                                     <h1>Let's Make Your best trip Ever!</h1>
-                                    <p class="font-size-20">Embark on a journey to discover the world's wonders.</p>
+                                    <p class="font-size-20">Embark on a journey to discover the Madhya Pradesh's wonders.</p>
                                     <div class="green-btn d-inline-block">
                                         <a href="about.html" class="d-inline-block">Explore Now</a>
                                     </div>
@@ -697,6 +697,68 @@
             <!-- container -->
         </div>
         <!-- news and article con -->
+    </section>
+    <!-- MEET OUR TEAM SECTION -->
+    <section class="float-left w-100 what-we-serve-con meet-our-team-con position-relative main-box padding-top padding-bottom">
+        <img alt="vector" class="vector4 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector4.png">
+        <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
+        <div class="container wow bounceInUp" data-wow-duration="2s">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4 class="mustard-text text-uppercase">Professional people</h4>
+                    <h2 class="text-uppercase text-right">meet our tour <br> guides
+                    </h2>
+                </div>
+                <div class="col-xl-10 col-12 mr-auto ml-auto serve-outer text-center">
+                    <div class="server-box var1">
+                        <img class="img-fluid" src="assets/images/team1-img.png" alt="icon">
+                        <h4>Jacob Knight</h4>
+                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
+                        <ul class="d-inline-block list-unstyled p-0 m-0">
+                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
+                    class="fa-brands fa-facebook-f"></i></a></li>
+                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
+                    class="fa-brands fa-x-twitter"></i></a></li>
+                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
+                    class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                        <!-- server box -->
+                    </div>
+                    <div class="server-box var2">
+                        <img class="img-fluid" src="assets/images/team2-img.png" alt="icon">
+                        <h4>Alexandra Booth</h4>
+                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
+                        <ul class="d-inline-block list-unstyled p-0 m-0">
+                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
+                    class="fa-brands fa-facebook-f"></i></a></li>
+                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
+                    class="fa-brands fa-x-twitter"></i></a></li>
+                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
+                    class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                        <!-- server box -->
+                    </div>
+                    <div class="server-box var3">
+                        <img class="img-fluid" src="assets/images/team3-img.png" alt="icon">
+                        <h4>Kian Wilkinson</h4>
+                        <p class="">Lorem ipsum dolor sit ametc onsectetur adipiscing.</p>
+                        <ul class="d-inline-block list-unstyled p-0 m-0">
+                            <li class="d-inline-block"><a href="https://www.facebook.com/login/"><i
+                    class="fa-brands fa-facebook-f"></i></a></li>
+                            <li class="d-inline-block"><a href="https://twitter.com/i/flow/login"><i
+                    class="fa-brands fa-x-twitter"></i></a></li>
+                            <li class="d-inline-block"><a href="https://www.instagram.com/" class="mr-0"><i
+                    class="fa-brands fa-instagram"></i></a></li>
+                        </ul>
+                        <!-- server box -->
+                    </div>
+                    <!-- server outer -->
+                </div>
+                <!-- row -->
+            </div>
+            <!-- container -->
+        </div>
+        <!-- what we serve con -->
     </section>
     <!-- FOOTER SECTION -->
     <section class="float-left w-100 position-relative main-box footer-con">
