--- a/saplefetch.html
+++ b/saplefetch.html
@@ -62,7 +62,7 @@
 
 </body>
 
-<script src="assets/component/search.js"></script>
+<script src="assets/MasterJs/booking.js"></script>
 <script src="assets/component/topBar.js"></script>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
