--- a/gallery.html
+++ b/gallery.html
@@ -90,56 +90,14 @@
         <div class="container wow bounceInUp" data-wow-duration="2s">
             <div class="heading-title text-center">
                 <h4 class="text-uppercase">Image Gallery</h4>
-                <h2 class="">Stay Update with Lucky<br>Tour & Travles
-                </h2>
-                <!-- heading title -->
+                <h2 class="">Stay Update with Lucky<br>Tour & Travels</h2>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/mpFamous1.png" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/mpFamous2.png" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 last-con">
-                    <div class="article-box position-relative">
-                        <figure><img class="img-fluid" src="assets/images/top-10-Mp.png" alt="img"></figure>
-                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
-                            <a href="single-blog.html">
-                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
-                            </a>
-                            <!-- bottom left -->
-                        </div>
-                        <!-- article box -->
-                    </div>
-                    <!-- col -->
-                </div>
-                <!-- row -->
+            <div class="row" id="gallery-container">
+                <!-- Dynamic gallery content will be inserted here -->
             </div>
-            <!-- container -->
         </div>
-        <!-- news and article con -->
     </section>
+    
     <div id="lucky-footer-container"></div>
 
     <!-- BACK TO TOP BUTTON -->
@@ -164,6 +122,7 @@
     <script src="assets/MasterJs/wholeTab.js"></script>
     <script src="assets/MasterJs/destination.js"></script>
     <script src="assets/MasterJs/testo.js"></script>
+    <script src="assets/MasterJs/gallery.js"></script>
     <script src="assets/component/LoaderAndHeader.js"></script>
     <script src="assets/component/about.js"></script>
     <script src="assets/component/footer.js"></script>
