--- a/destinations.html
+++ b/destinations.html
@@ -103,7 +103,8 @@
                 <h4 class="text-uppercase">Top Destinations</h4>
                 <h2 class="">Explore the Beauty of <br> The Madhya Pradesh</h2>
             </div>
-            <div id="destinations-carousel" class="owl-carousel"></div>
+            <div id="rep-destinations-carousel" class="owl-carousel"></div>
+            
         </div>
     </section>
     <!-- TRAVEL TOUR AND PACKAGES -->
@@ -180,7 +181,8 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/MasterJs/booking.js"></script>
     <script src="assets/MasterJs/wholeTab.js"></script>
-    <script src="assets/MasterJs/destination.js"></script>
+    <!-- <script src="assets/MasterJs/destination.js"></script> -->
+    <script src="assets/MasterJs/repDestination.js"></script>
     <script src="assets/MasterJs/testo.js"></script>
     <script src="assets/component/LoaderAndHeader.js"></script>
     <script src="assets/component/about.js"></script>
