--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                     <div class="col-lg-7">
                         <div class="sub-banner-inner-con padding-bottom">
                             <h1>About Us</h1>
-                            <p class="font-size-20">Lorem ipsum dolor sit amet consectetur adipiscing elit sed doeiusm tempor incididunt ut labore et dolore.
+                            <p class="font-size-20">Dedicated to excellence, we blend passion and expertise to deliver unforgettable travel experiences. Your journey, our commitment
                             </p>
                             <div class="breadcrumb-con d-inline-block" data-aos="fade-up" data-aos-duration="600">
                                 <ol class="breadcrumb mb-0">
