--- a/booking.html
+++ b/booking.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-7">
                         <div class="sub-banner-inner-con padding-bottom">
                             <h1>Booking</h1>
-                            <p class="font-size-20">Lorem ipsum dolor sit amet consectetur adipiscing elit sed doeiusm tempor incididunt ut labore et dolore.
+                            <p class="font-size-20">Simplify your travel planning with our seamless booking process. Enjoy a hassle-free experience from start to finish.
                             </p>
                             <div class="breadcrumb-con d-inline-block" data-aos="fade-up" data-aos-duration="600">
                                 <ol class="breadcrumb mb-0">
