--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
                     <div class="col-lg-7">
                         <div class="sub-banner-inner-con padding-bottom">
                             <h1>Gallery</h1>
-                            <p class="font-size-20">Lorem ipsum dolor sit amet consectetur adipiscing elit sed doeiusm tempor incididunt ut labore et dolore.
+                            <p class="font-size-20"> Discover stunning moments captured on our journeys. Each image tells a story of exceptional travel experiences.
                             </p>
                             <div class="breadcrumb-con d-inline-block" data-aos="fade-up" data-aos-duration="600">
                                 <ol class="breadcrumb mb-0">
