--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-7">
                         <div class="sub-banner-inner-con padding-bottom">
                             <h1>Contact Us</h1>
-                            <p class="font-size-20">Lorem ipsum dolor sit amet consectetur adipiscing elit sed doeiusm tempor incididunt ut labore et dolore.
+                            <p class="font-size-20">Reach out for personalized assistance and support. We're here to help make your travel experience exceptional.
                             </p>
                             <div class="breadcrumb-con d-inline-block" data-aos="fade-up" data-aos-duration="600">
                                 <ol class="breadcrumb mb-0">
@@ -114,7 +114,7 @@
                     <div class="about-travel-content">
                         <h4 class="text-uppercase">Talk to us</h4>
                         <h2>Get in Touch <br> With Us</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliquaquis</p>
+                        <p>Contact us for tailored support and guidance. We're committed to ensuring your travel experience is extraordinary.</p>
                         <div class="contact-info">
                             <h4 class="text-uppercase sub-heading">Contact Info</h4>
                             <ul class="list-unstyled p-0 m-0 contact-info-inner-wrapper">
