--- a/destinations.html
+++ b/destinations.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-7">
                         <div class="sub-banner-inner-con padding-bottom">
                             <h1>Destinations</h1>
-                            <p class="font-size-20">Lorem ipsum dolor sit amet consectetur adipiscing elit sed doeiusm tempor incididunt ut labore et dolore.
+                            <p class="font-size-20">Explore breathtaking locations with us. Our curated trips ensure memorable experiences and seamless travel planning.
                             </p>
                             <div class="breadcrumb-con d-inline-block" data-aos="fade-up" data-aos-duration="600">
                                 <ol class="breadcrumb mb-0">
